syntax = "proto3";

option go_package = "github.com/garupanojisan/mredis/protobuf/pb";

service Kvs {
    // Set key-value data
    rpc Set(SetRequest) returns (SetResponse) {};
    
    // Get value of the key
    rpc Get(GetRequest) returns (GetResponse) {};
}

message SetRequest {
    string key = 1;
    bytes value = 2;
}

message SetResponse {

}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
}
